commit -a for all proyect

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test GIT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div>
         <h3>Prueba GIT</h3>
     </div>
+    
+    <footer></footer>
+
     <script src="main.js"></script>
+
 </body>
 </html>
