--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <header>Agregando...</header>
+    
     <div>
         <h3>Prueba GIT</h3>
     </div>
