--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <h3>Prueba GIT</h3>
     </div>
     
-    <footer></footer>
+    <footer>
+        <a href="#">Copyright</a>
+    </footer>
 
     <script src="main.js"></script>
 
